refactor: portfolio-quality code cleanup across entire codebase
- Remove all @SuppressWarnings, emoji comments, Collectors.toList()
- Replace RuntimeException/IllegalStateException with domain exceptions
  (ResourceNotFoundException, BusinessException) throughout all services
- Add @Transactional(readOnly=true) to all read methods in every service
- Extract inner classes OrderItemRequest and StatusUpdateRequest to dto/request/
- Remove dead DTO fields (OrderRequest.status, OrderItemRequest.unitPrice)
- Add @Valid + Bean Validation to all @RequestBody parameters
- Add @PreAuthorize per-method on all controllers
- Fix HTTP codes: 201 for POST creates, 204 for DELETEs
- Remove duplicate PATCH /orders/{id}/status endpoint
- Remove test-jwt.html from static resources (production security)
- Add @Profile(!prod) to DataInitializer
- Fix CORS: allowCredentials false (JWT uses Authorization header)
- Add JWT Bearer security scheme to Swagger UI (Authorize button)
- Add NoResourceFoundException handler (returns 404, not 500)
- Add JWT secrets to dev and test profiles (HS512 requires 64+ bytes)
- Add 7 Claude Code agents + CLAUDE.md for autonomous pipeline
- Write 59 unit + integration tests (all passing)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>