@@ -2,145 +2,133 @@ package com.tiagoportilho.ServEasy.service;
 
 import com.tiagoportilho.ServEasy.dto.IngredientDto;
 import com.tiagoportilho.ServEasy.dto.MenuItemDto;
+import com.tiagoportilho.ServEasy.exception.BusinessException;
+import com.tiagoportilho.ServEasy.exception.ResourceNotFoundException;
 import com.tiagoportilho.ServEasy.model.MenuItem;
 import com.tiagoportilho.ServEasy.model.MenuItemIngredient;
 import com.tiagoportilho.ServEasy.model.StockItem;
-import com.tiagoportilho.ServEasy.repository.MenuItemRepository;
 import com.tiagoportilho.ServEasy.repository.MenuItemIngredientRepository;
+import com.tiagoportilho.ServEasy.repository.MenuItemRepository;
 import com.tiagoportilho.ServEasy.repository.StockItemRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@SuppressWarnings("null")
 public class MenuService {
-    
+
     private final MenuItemRepository menuItemRepository;
     private final MenuItemIngredientRepository ingredientRepository;
     private final StockItemRepository stockItemRepository;
 
+    @Transactional(readOnly = true)
     public List<MenuItem> getAllMenuItems() {
         return menuItemRepository.findAll();
     }
 
     @Transactional(readOnly = true)
     public List<MenuItemDto> getAllMenuItemsAsDto() {
-        List<MenuItem> menuItems = menuItemRepository.findAll();
-        return menuItems.stream()
+        return menuItemRepository.findAll().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public List<MenuItem> getAvailableMenuItems() {
         return menuItemRepository.findAvailableMenuItemsWithIngredients();
     }
 
+    @Transactional(readOnly = true)
     public List<MenuItem> getMenuItemsByCategory(MenuItem.Category category) {
         return menuItemRepository.findByCategoryAndIsAvailableTrue(category);
     }
 
+    @Transactional(readOnly = true)
     public Optional<MenuItem> getMenuItemById(Long id) {
         return menuItemRepository.findById(id);
     }
 
+    @Transactional
     public MenuItem saveMenuItem(MenuItem menuItem) {
         return menuItemRepository.save(menuItem);
     }
 
+    @Transactional
     public void deleteMenuItem(Long id) {
         menuItemRepository.deleteById(id);
     }
 
+    @Transactional
     public MenuItem toggleAvailability(Long id) {
-        Optional<MenuItem> menuItemOpt = menuItemRepository.findById(id);
-        if (menuItemOpt.isPresent()) {
-            MenuItem menuItem = menuItemOpt.get();
-            menuItem.setIsAvailable(!menuItem.getIsAvailable());
-            return menuItemRepository.save(menuItem);
-        }
-        throw new RuntimeException("Item do menu não encontrado");
+        MenuItem menuItem = menuItemRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Item do cardápio", id));
+        menuItem.setIsAvailable(!Boolean.TRUE.equals(menuItem.getIsAvailable()));
+        return menuItemRepository.save(menuItem);
     }
 
+    @Transactional(readOnly = true)
     public Optional<MenuItemDto> getMenuItemDtoById(Long id) {
-        Optional<MenuItem> menuItemOpt = menuItemRepository.findById(id);
-        if (menuItemOpt.isPresent()) {
-            MenuItem menuItem = menuItemOpt.get();
-            MenuItemDto dto = convertToDto(menuItem);
-            return Optional.of(dto);
-        }
-        return Optional.empty();
+        return menuItemRepository.findById(id).map(this::convertToDto);
     }
 
     @Transactional
     public MenuItem saveMenuItemWithIngredients(MenuItemDto dto) {
-        // Verificar se existem itens no estoque
-        List<StockItem> stockItems = stockItemRepository.findAll();
-        if (stockItems.isEmpty()) {
-            throw new IllegalStateException("Não é possível criar pratos sem itens no estoque. Por favor, cadastre itens no estoque primeiro.");
+        if (stockItemRepository.count() == 0) {
+            throw new BusinessException(
+                    "Não é possível criar pratos sem itens no estoque. Cadastre itens no estoque primeiro.",
+                    HttpStatus.UNPROCESSABLE_ENTITY, "NO_STOCK_ITEMS");
         }
 
-        // Verificar se os ingredientes selecionados existem no estoque
         for (IngredientDto ingredient : dto.getIngredients()) {
             if (!stockItemRepository.existsById(ingredient.getStockItemId())) {
-                throw new IllegalStateException("Item do estoque com ID " + ingredient.getStockItemId() + " não encontrado.");
+                throw new ResourceNotFoundException("Item do estoque", ingredient.getStockItemId());
             }
         }
 
-        // Criar ou atualizar o MenuItem
         MenuItem menuItem;
         if (dto.getId() != null) {
-            // Atualização - remover ingredientes existentes
-            Optional<MenuItem> existingOpt = menuItemRepository.findById(dto.getId());
-            if (existingOpt.isPresent()) {
-                menuItem = existingOpt.get();
-                // Limpar ingredientes existentes
-                ingredientRepository.deleteByMenuItemId(dto.getId());
-            } else {
-                throw new RuntimeException("Item do menu não encontrado para atualização");
-            }
+            menuItem = menuItemRepository.findById(dto.getId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Item do cardápio", dto.getId()));
+            ingredientRepository.deleteByMenuItemId(dto.getId());
         } else {
-            // Novo item
             menuItem = new MenuItem();
         }
 
-        // Preencher dados básicos do MenuItem
         menuItem.setName(dto.getName());
         menuItem.setDescription(dto.getDescription());
         menuItem.setPrice(dto.getPrice());
         menuItem.setCategory(dto.getCategory());
         menuItem.setImageUrl(dto.getImageUrl());
-        menuItem.setIsAvailable(dto.getIsAvailable() != null ? dto.getIsAvailable() : true);
-
-        // Salvar o MenuItem primeiro
+        menuItem.setIsAvailable(Boolean.TRUE.equals(dto.getIsAvailable()));
         menuItem = menuItemRepository.save(menuItem);
 
-        // Criar e salvar os ingredientes
-        final MenuItem finalMenuItem = menuItem;
+        final MenuItem saved = menuItem;
         List<MenuItemIngredient> ingredients = dto.getIngredients().stream()
                 .map(ingredientDto -> {
                     MenuItemIngredient ingredient = new MenuItemIngredient();
-                    ingredient.setMenuItem(finalMenuItem);
-                    
+                    ingredient.setMenuItem(saved);
                     StockItem stockItem = stockItemRepository.findById(ingredientDto.getStockItemId())
-                            .orElseThrow(() -> new RuntimeException("Item do estoque não encontrado"));
+                            .orElseThrow(() -> new ResourceNotFoundException("Item do estoque", ingredientDto.getStockItemId()));
                     ingredient.setStockItem(stockItem);
                     ingredient.setQuantity(ingredientDto.getQuantity());
                     ingredient.setUnit(ingredientDto.getUnit());
-                    ingredient.setShowUnit(ingredientDto.getShowUnit() != null ? ingredientDto.getShowUnit() : true);
-                    
+                    ingredient.setShowUnit(Boolean.TRUE.equals(ingredientDto.getShowUnit()));
                     return ingredient;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         ingredientRepository.saveAll(ingredients);
-        
-        return menuItem;
+        return saved;
+    }
+
+    @Transactional(readOnly = true)
+    public boolean hasStockItems() {
+        return stockItemRepository.count() > 0;
     }
 
     private MenuItemDto convertToDto(MenuItem menuItem) {
@@ -153,7 +141,6 @@ public class MenuService {
         dto.setImageUrl(menuItem.getImageUrl());
         dto.setIsAvailable(menuItem.getIsAvailable());
 
-        // Buscar ingredientes com fetch join para evitar lazy loading
         List<MenuItemIngredient> ingredients = ingredientRepository.findByMenuItemIdWithStockItem(menuItem.getId());
         List<IngredientDto> ingredientDtos = ingredients.stream()
                 .map(ingredient -> {
@@ -162,16 +149,12 @@ public class MenuService {
                     ingredientDto.setStockItemName(ingredient.getStockItem().getName());
                     ingredientDto.setQuantity(ingredient.getQuantity());
                     ingredientDto.setUnit(ingredient.getUnit());
-                    ingredientDto.setShowUnit(ingredient.getShowUnit() != null ? ingredient.getShowUnit() : true);
+                    ingredientDto.setShowUnit(Boolean.TRUE.equals(ingredient.getShowUnit()));
                     return ingredientDto;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         dto.setIngredients(ingredientDtos);
         return dto;
-    }
-
-    public boolean hasStockItems() {
-        return stockItemRepository.count() > 0;
     }
 }
